# Vocabulary-Learning-with-Space-Repetition-Learning

./: .gitignore  README.md  pyproject.toml
apps/cards/: admin.py  models.py  urls.py  views.py
apps/cards/migrations/: 0001_initial.py  0002_card_question_type.py
apps/decks/: models.py  urls.py  views.py
apps/decks/migrations/: 0001_initial.py
config/: settings.py  urls.py
